--- a/Third_Lib_App/KPNS_Third_Lib7/project.properties
+++ b/Third_Lib_App/KPNS_Third_Lib7/project.properties
@@ -12,4 +12,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-23
-android.library.reference.1=../../../../Documents/Git_Repo/KPNS_Lib_R2.1.9_BuildVer
+android.library.reference.1=../../../../Desktop/KPNS_2.1.9/KPNS_Lib_R2.1.8_BuildVer
