--- a/Third_Lib_App/KPNS_Third_Lib5_ANDROID/AndroidManifest.xml
+++ b/Third_Lib_App/KPNS_Third_Lib5_ANDROID/AndroidManifest.xml
@@ -116,6 +116,7 @@
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
                 <action android:name="android.intent.action.DATE_CHANGED" />
+                <action android:name="android.intent.action.SIM_STATE_CHANGED" />
                 <action android:name="IPC.PUSH.BR.REC_android.ktpns.hansol05" />
             </intent-filter>
              <intent-filter>
