--- a/Third_Lib_App/KPNS_Third_Lib5_GCM_ANDROID/AndroidManifest.xml
+++ b/Third_Lib_App/KPNS_Third_Lib5_GCM_ANDROID/AndroidManifest.xml
@@ -117,6 +117,7 @@
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
                 <action android:name="android.intent.action.DATE_CHANGED" />
+                <action android:name="android.intent.action.SIM_STATE_CHANGED" />
                 <action android:name="android.intent.action.PHONE_STATE" />
                 <action android:name="IPC.PUSH.BR.REC_android.ktpns.hansol05" />
             </intent-filter>
